--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 
        <section class="photo-grid">
          <div class="photo-grid__container">          
-         <img class="photo-grid__item" src="./images/photo-grid-train.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg">
-         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg">
+         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
+         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака и горы">
+         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+         <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+         <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Лед">
+         <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+         <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус"> 
+         <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак">
+         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Сопка" >
+         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Утес">
+         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
         </div>
        </section>
 
