Удалена лишняя вложенность в секции photo-grid, валидатор не содержит ошибок, убраны дубликаты правил в медиа запросах

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
        <header class="header">
          <img class="header__logo" src="./images/header-logo.svg" alt="Лого">
          <ul class="header__lang-zone">
-           <li><a class="header__lang-cell header__lang-cell_chosen" href="">Ru</a></li>
-           <li><a class="header__lang-cell" href="">En</a></li>
+           <li class="header__lang-cell"><a class="header__lang-link header__lang-link_chosen" href="">Ru</a></li>
+           <li class="header__lang-cell"><a class="header__lang-link" href="">En</a></li>
          </ul>
         </header>
        
